# webcam_logger

./: CMakeLists.txt  camera.cc  camera.h  config.json  find_dependencies.cmake  main.cc
